--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "navkit-vue",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "type": "module",
   "main": "dist/navkit.cjs.js",
   "module": "dist/navkit.esm.js",
@@ -11,34 +11,35 @@
   "scripts": {
     "build": "rollup -c",
     "prepublishOnly": "npm run build"
-  },"keywords": [
-  "tv",
-  "ott",
-  "streaming",
-  "smart-tv",
-  "television",
-  "media",
-  "video",
-  "entertainment",
-  "content-platform",
-  "vue-tv",
-  "tv-app",
-  "ott-platform",
-  "video-streaming",
-  "media-player",
-  "television-interface",
-  "broadcast",
-  "streaming-service",
-  "tv-components",
-  "vue-ott",
-  "connected-tv",
-  "digital-television",
-  "tv-navigation",
-  "media-streaming",
-  "interactive-tv",
-  "tv-ui",
-  "television-app"
-],
+  },
+  "keywords": [
+    "tv",
+    "ott",
+    "streaming",
+    "smart-tv",
+    "television",
+    "media",
+    "video",
+    "entertainment",
+    "content-platform",
+    "vue-tv",
+    "tv-app",
+    "ott-platform",
+    "video-streaming",
+    "media-player",
+    "television-interface",
+    "broadcast",
+    "streaming-service",
+    "tv-components",
+    "vue-ott",
+    "connected-tv",
+    "digital-television",
+    "tv-navigation",
+    "media-streaming",
+    "interactive-tv",
+    "tv-ui",
+    "television-app"
+  ],
   "author": "Lazar Trifunovic",
   "license": "ISC",
   "description": "Vue navigation and utility composables",
